--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prettier": "prettier --write \"**/*.+(js|mjs|json|ts|tsx|json|yaml|md|css)\""
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -21,11 +21,13 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
